--- a/mysql/重置密码.md
+++ b/mysql/重置密码.md
@@ -41,4 +41,20 @@ Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
 mysql>
 ```
 
+# 密码需要强较验
+```mysql
+mysql> CREATE DATABASE wenyi;
+ERROR 1820 (HY000): You must reset your password using ALTER USER statement before executing this statement.
+
+mysql> SET PASSWORD = PASSWORD('123456');
+ERROR 1819 (HY000): Your password does not satisfy the current policy requirements
+
+mysql> SET PASSWORD = PASSWORD('!QA@WS#ED');
+Query OK, 0 rows affected, 1 warning (0.15 sec)
+
+mysql> CREATE DATABASE wenyi;
+Query OK, 1 row affected (0.00 sec)
+```
+
+
 
