--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -1,4 +1,37 @@
 
+## 分解定义
+### 定义模块
+```javascript
+// 定义模块
+var modules = [(function (module, exports, __webpack_require__){
+  module.exports = { index:'test0' }
+})]
+```
+
+### 定义加载器 解决模块依赖关系
+```javascript
+// 模块加载器
+function __webpack_require__(moduleId){
+    // ... 
+  	// 统一管理所有模块
+    var module ={ exports: {} };
+  	modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
+  	return module.exports;
+}
+```
+
+### 入口文件
+```javascript
+// 入口文件
+function entry(){
+    let test = __webpack_require__(0);
+  	console.log(test.index);
+}
+entry();
+```
+
+
+## 完整示例
 ```javascript
 (function(modules){
    var installedModules = {};
