--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -24,7 +24,8 @@ function __webpack_require__(moduleId){
 ```javascript
 // 入口文件
 function entry(){
-    let test = __webpack_require__(0);
+    // 加载模块
+    let test = __webpack_require__(0);
   	console.log(test.index);
 }
 entry();
