--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -6,23 +6,23 @@
 
 
 ### 从启动webpack构建到输出结果经历了一系列过程，它们是：
-#### 生成配置
-```txt
+#### 1、生成配置
+
 解析webpack配置参数，合并从shell传入和webpack.config.js文件里配置的参数，生产最后的配置结果。
-```
-#### 注册插件
+
+#### 2、注册插件
 注册所有配置的插件，好让插件监听webpack构建生命周期的事件节点，以做出对应的反应。
 
-#### 解析文件依赖
+#### 3、解析文件依赖
 从配置的entry入口文件开始解析文件构建AST语法树，找出每个文件所依赖的文件，递归下去。
 
-#### 载入loader
+#### 4、载入loader
 在解析文件递归的过程中根据文件类型和loader配置找出合适的loader用来对文件进行转换。
 
-#### 产出文件
+#### 5、产出文件，生成chunk
 递归完后得到每个文件的最终结果，根据entry配置生成代码块chunk。
 
-#### 输出
+#### 6、输出chunk
 输出所有chunk到文件系统。
 	
 需要注意的是，在构建生命周期中有一系列插件在合适的时机做了合适的事情，比如UglifyJsPlugin会在loader转换递归完后对结果再使用UglifyJs压缩覆盖之前的结果。
