--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -2,9 +2,6 @@
 
 ## webpack构建流程
 
-
-
-
 ### 从启动webpack构建到输出结果经历了一系列过程，它们是：
 #### 1、生成配置
 
@@ -26,6 +23,15 @@
 输出所有chunk到文件系统。
 	
 需要注意的是，在构建生命周期中有一系列插件在合适的时机做了合适的事情，比如UglifyJsPlugin会在loader转换递归完后对结果再使用UglifyJs压缩覆盖之前的结果。
+
+## 添加loader
+```
+作用：Loaders可以让你以你喜欢的方式进行开发，loader会帮你把代码转换成你运行的代码。
+    如：less -> css , jade -> html ,TypeScript -> JS, es6 -> JS. 
+	
+现在已经有很多的插件可以帮忙我们用我们喜欢的方式去写前端的代码。
+```
+## 添加插件
 
 
 
