--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -31,6 +31,17 @@
 	
 现在已经有很多的插件可以帮忙我们用我们喜欢的方式去写前端的代码。
 ```
+
+```javascript
+module.exports = function(src) {
+ return src + '\n'
+ + 'window.onload = function() { \n'
+ + ' console.log("This is from the loader!"); \n'
+ + '}';
+};
+
+```
+
 ## 添加插件
 
 
