--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -42,8 +42,11 @@ module.exports = function(src) {
 
 ```
 
-## 添加插件
-
+## 添加插件 
+https://doc.webpack-china.org/concepts/
+```
+插件目的在于解决 loader 无法实现的其他事。
+```
 
 
 ## 分解定义
