--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -17,7 +17,7 @@
 在解析文件递归的过程中根据文件类型和loader配置找出合适的loader用来对文件进行转换。
 
 #### 5、产出文件，生成chunk
-递归完后得到每个文件的最终结果，根据entry配置生成代码块chunk。
+从entry开始递归完后得到每个文件的最终结果，并生成代码块chunk。
 
 #### 6、输出chunk
 输出所有chunk到文件系统。
