--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -45,7 +45,49 @@ module.exports = function(src) {
 ## 添加插件 
 https://doc.webpack-china.org/concepts/
 ```
-插件目的在于解决 loader 无法实现的其他事。
+插件目的在于解决 loader 无法实现的其他事。插件与核心代码几乎是同时执行的。核心代码中有好多事件hook用于插件的执行的。
+```
+```javascript
+ compiler.plugin('run', function(compiler, callback) {
+    // console.log(compiler)
+    console.log("webpack 构建过程开始！！！");
+    callback();
+  });
+ 
+  compiler.plugin("compile", function(params) {
+    console.log("编译器开始编译...");
+  });
+
+  compiler.plugin("compilation", function(compilation) {
+    console.log("开始编译一个区块...");
+
+    compilation.plugin("optimize", function() {
+      console.log("文件优化...");
+    });
+  });
+  
+  compiler.plugin("after-compile", function(params, callback) {
+    console.log(" after编译器开始编译...");
+    callback()
+  });
+
+  compiler.plugin('make', function(compiler, callback) {
+    console.log("webpack make 构建过程开始！！！");
+    callback();
+  });
+ 
+  compiler.plugin('emit', function(compiler, callback) {
+    // console.log(compiler)
+    console.log("webpack 编译完成！！！");
+    callback();
+  });
+  
+  compiler.plugin('after-emit', function(compiler, callback) {
+    // console.log(compiler)
+    console.log("webpack after编译完成！！！");
+    callback();
+  });
+  
 ```
 
 
