--- a/webpack/基础原理.md
+++ b/webpack/基础原理.md
@@ -13,8 +13,8 @@
 #### 3、解析文件依赖
 从配置的entry入口文件开始解析文件构建AST语法树，找出每个文件所依赖的文件，递归下去。
 
-#### 4、载入loader
-在解析文件递归的过程中根据文件类型和loader配置找出合适的loader用来对文件进行转换。
+#### 4、载入module
+在解析文件,递归的过程中根据test文件类型和module配置找出合适的loader用来对文件进行转换。
 
 #### 5、产出文件，生成chunk
 从entry开始递归完后得到每个文件的最终结果，并生成代码块chunk。
